# togo

./: Cargo.toml  README.md
togo/: Cargo.toml
togo-core/: Cargo.toml
togo-core/src/: error.rs  lib.rs  operation.rs  shard.rs
togo-core/src/log/: blocklog.rs  mod.rs
togo-core/src/storage/: mod.rs  sled.rs
togo-vr/: Cargo.toml
togo-vr/src/: lib.rs  message.rs  state.rs  transport.rs
togo-vr/src/log/: memory.rs  mod.rs
togo-vr/src/replica/: client.rs  cluster.rs  mod.rs
